Implement get slots API
