# controller/depdencies.go
@@ -21,4 +21,5 @@ type EventService interface {
 
 type SlotService interface {
 	Create(context.Context, int, int) (int, error)
+	GetAll(context.Context, int) (contract.SlotList, error)
 }
