# docs/swagger.yaml
@@ -39,6 +39,26 @@ definitions:
       user_id:
         type: integer
     type: object
+  contract.Slot:
+    properties:
+      end_time:
+        type: string
+      id:
+        type: integer
+      start_time:
+        type: string
+      status:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  contract.SlotList:
+    properties:
+      slots:
+        items:
+          $ref: '#/definitions/contract.Slot'
+        type: array
+    type: object
   contract.User:
     properties:
       email:
@@ -217,6 +237,25 @@ paths:
       tags:
       - event
   /users/{user_id}/slots:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: user id
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/contract.SlotList'
+      summary: This API returns slots for a user starting today till 14 days.
+      tags:
+      - slot
     post:
       consumes:
       - application/json
